feat: Jakarta Persistence Driver - fixes
Fix null pointers
- retrieve cache directly from database manager
- use Arrays.asList instead of List.of because some values might be null